ing-lobo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-lobo
  namespace: ns-lobo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /lobo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: svc-lobo
            port:
              number: 80
